--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "*"
 numpy = "<2"
 groq = "*"
 google-generativeai = "*"
+transformers = "*"
+torch = "*"
 python-dotenv = "*"
 click = "*"
 wonderwords = "*"
